@@ -159,6 +159,18 @@ ifdef DEBUG_CONFL
 DEFINES += -DDEBUG_CONFL
 endif
 
+ifdef PLUGIN_EPGSEARCH_MAX_SUBTITLE_LENGTH
+DEFINES += -DMAX_SUBTITLE_LENGTH='$(PLUGIN_EPGSEARCH_MAX_SUBTITLE_LENGTH)'
+endif
+
+### length of the filling '-' in the channel separators, defaults to
+### "----------------------------------------"
+### overwrite this with PLUGIN_EPGSEARCH_SEPP_ITEMS=--- in your Make.config
+### to avoid problems with graphtft
+ifdef PLUGIN_EPGSEARCH_SEPP_ITEMS
+DEFINES += -DMENU_SEPPERATOR_ITEMS='"$(PLUGIN_EPGSEARCH_SEPP_ITEMS)"'
+endif
+
 OBJS2    = mainmenushortcut.o epgsearchonly.o
 LIBS2    =
 
